--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='./style.css'>
   <title>Frontend Mentor | Order summary card</title>
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main class='flex'>
     <div class='card'>
       <div class='top-img'>
-        <img src="./images/illustration-hero.svg" alt="dancing with music on">
+        <img src="./images/illustration-hero.svg" alt="dancing with earphones on">
       </div>
       
       <div class='texts'>
@@ -45,11 +40,11 @@
     </div>
   </main>
   
-  <!-- <footer>
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/dombrga">Dom B</a>.
     </div>
-  </footer> -->
+  </footer>
 </body>
 </html>
